--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
+.firebase
 
 # dependencies
 /node_modules
+
 
 # profiling files
 chrome-profiler-events*.json
