--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
+    "apexcharts": "^3.32.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "6.3.3",
     "tslib": "^2.3.0",
